2011-04-29  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSOutlineView.m: Implement -keyDown: to expand/contract
	items.

2011-04-29  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTextView.m (-mouseDown:):
	Add support for making selections with the mouse which span multiple
	text views
	* Source/NSTextView.m (-setSelectedRange:affinity:stillSelecting:):
	Replace the complex display invalidation code with two calls to
	-[NSLayoutManager invalidateDisplayForCharacterRange:], which will
	take care to invalidate all necessary text views.

2011-04-29  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTextView.m (-setTypingAttributes:) Guard against
	nil layout manager

2011-04-28  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSPopUpButtonCell.m: Override -representedObject and
	-setRepresentedObject: with implementations that delegate the
	call to [self selectedItem] (the NSMenuItem).

2011-04-27  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTextView.m (-selectionRangeForProposedRange:granularity:):
	Remove a special case which caused this method to refuse to
	expand a range {[string length], 0}.
	This was why the align left/center/right menu items didn't work
	in Ink when the insertion point was at the end of a document.
	The behaviour should match OS X now.

2011-04-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/AppKit/NSSavePanel.h:
	* Source/NSSavePanel.m: Implement -setNameFieldStringValue:,
	-nameFieldStringValue, -setNameFieldLabel:, -nameFieldLabel.

2011-04-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTextView.m (-setRulersVisible:): Create a horizontal ruler on
	the scroll view if needed - this seems to be the OS X behaviour.

2011-04-21  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m (-nativeDrawInRect:...): Fix a bug in my recent change
	here which mis-positioned images.

2011-04-21  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/tiff.m:
	* Source/nsimage-tiff.h: